switched toolselection for treelopper to CustomModelData value